--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </script>
   </head>
   <body>
-    <img class="tree-illustration" src="./Images/lifetree7.png" alt="Livstræ" />
+    <img class="tree-illustration" src="lifetree7.png" alt="Livstræ" />
     <div class="overlay">
       <h1>Mit Digitale Livstræ</h1>
       <p>
