--- a/index.html
+++ b/index.html
@@ -29,28 +29,29 @@
     </script>
   </head>
   <body>
-    <img class="tree-illustration" src="lifetree7.png" alt="Livstræ" />
+    <img class="tree-illustration" src="./Images/lifetree7.png" alt="Livstræ" />
     <div class="overlay">
       <h1>Mit Digitale Livstræ</h1>
       <p>
         Hvert blad rummer en del af din historie. Klik på et blad og begynd din
         rejse gennem minder, tanker og oplevelser.
       </p>
+      <div class="mobile-buttons">
+        <a class="blad-button" data-blad="1">Blad 1</a>
+        <a class="blad-button" data-blad="2">Blad 2</a>
+        <a class="blad-button" data-blad="3">Blad 3</a>
+        <a class="blad-button" data-blad="4">Blad 4</a>
+        <a class="blad-button" data-blad="5">Blad 5</a>
+        <a class="blad-button" data-blad="6">Blad 6</a>
+        <a class="blad-button" data-blad="7">Blad 7</a>
+        <a class="blad-button" data-blad="8">Blad 8</a>
+        <a class="blad-button" data-blad="9">Blad 9</a>
+        <a class="blad-button" data-blad="10">Blad 10</a>
+        <a class="blad-button" data-blad="11">Blad 11</a>
+        <a class="blad-button" data-blad="12">Blad 12</a>
+      </div>
     </div>
-    <div class="mobile-buttons">
-      <a class="blad-button" data-blad="1">Blad 1</a>
-      <a class="blad-button" data-blad="2">Blad 2</a>
-      <a class="blad-button" data-blad="3">Blad 3</a>
-      <a class="blad-button" data-blad="4">Blad 4</a>
-      <a class="blad-button" data-blad="5">Blad 5</a>
-      <a class="blad-button" data-blad="6">Blad 6</a>
-      <a class="blad-button" data-blad="7">Blad 7</a>
-      <a class="blad-button" data-blad="8">Blad 8</a>
-      <a class="blad-button" data-blad="9">Blad 9</a>
-      <a class="blad-button" data-blad="10">Blad 10</a>
-      <a class="blad-button" data-blad="11">Blad 11</a>
-      <a class="blad-button" data-blad="12">Blad 12</a>
-    </div>
+
     <!-- Absolute-position knapper til desktop -->
     <a class="blad-button" style="top: 44%; left: 51.6%" data-blad="1"
       >Blad 1</a
