ny close btn test

--- a/upload.html
+++ b/upload.html
@@ -39,7 +39,7 @@
           <button id="uploadVideo">Video</button>
           <button id="uploadAudio">Lydfil</button>
           <button id="recordAudio">Optag lyd</button>
-          <button id="uploadAllFiles">Alle filer</button>
+          <button id="uploadAllFiles">Upload</button>
           <button id="writeText">Tekst</button>
         </div>
         <div id="textInputContainer">
